--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,29 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context=".MainActivity">
 
-   <EditText
-       android:id="@+id/edit_phone"
-       android:layout_width="match_parent"
-       android:layout_height="wrap_content"
-       android:hint="请输入手机号:"
-       />   <EditText
-       android:id="@+id/edit_password"
-       android:layout_width="match_parent"
-       android:layout_height="wrap_content"
-       android:hint="请输入密码:"
-       />
+    <EditText
+        android:id="@+id/edit_phone"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="请输入手机号:" />
+
+    <EditText
+        android:id="@+id/edit_password"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="请输入密码:" />
 
     <Button
         android:id="@+id/btn_login"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="login"
-        />
+        android:text="login" />
+
+    <Button
+        android:id="@+id/btn_select_all_user"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="查找所有用户" />
 
 </LinearLayout>
